# Bazel-ModInfo-Repro

rules_go/: go.mod  go.sum
rules_go/go/tools/builders/: importcfg.go
testgo/: BUILD.bazel  READMD.md  WORKSPACE  app.py  deps.bzl  go.mod  go.sum  main.go  mod.go  output  pack-rule_go.sh
